--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -25,6 +25,32 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity
+
+    android:name=".MainActivity"
+
+    android:exported="true"
+
+    android:launchMode="singleTop"
+
+    android:theme="@style/AppTheme">
+
+    <intent-filter>
+
+        <action android:name="android.intent.action.MAIN" />
+
+        <category android:name="android.intent.category.LAUNCHER" />
+
+    </intent-filter>
+
+    <meta-data
+
+        android:name="com.google.android.gms.measurement.api.AppMeasurementService"
+
+        android:value="com.google.firebase.analytics.connector.internal.FirebaseAnalyticsService" />
+
+</activity>
+
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
         <meta-data
