--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -46,4 +46,26 @@
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
 </dict>
+<key>CFBundleURLTypes</key>
+
+<array>
+
+    <dict>
+
+        <key>CFBundleTypeRole</key>
+
+        <string>Editor</string>
+
+        <key>CFBundleURLSchemes</key>
+
+        <array>
+
+            <string>com.googleusercontent.apps.335802907028-hcgop02p43abicq5hmklnadb2andn0l5</string>
+
+        </array>
+
+    </dict>
+
+</array>
+
 </plist>
