--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,12 +14,18 @@ dependencies:
   flutter_svg: ^2.0.10+1
   show_hide_password: ^0.0.2
   keyboard_avoider: ^0.2.0
+  cloud_firestore: ^5.4.1
+  firebase_core: ^3.4.1
+  firebase_auth: ^5.2.1
+  firebase_database: ^11.1.2
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
   flutter_launcher_icons: ^0.13.1
+  change_app_package_name: ^1.3.0
 
 flutter:
 
