--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,6 +2,18 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>GIDClientID</key>
+	<string>335802907028-hcgop02p43abicq5hmklnadb2andn0l5.apps.googleusercontent.com</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+				<string>com.googleusercontent.apps.335802907028-hcgop02p43abicq5hmklnadb2andn0l5</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
@@ -46,26 +58,4 @@
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
 </dict>
-<key>CFBundleURLTypes</key>
-
-<array>
-
-    <dict>
-
-        <key>CFBundleTypeRole</key>
-
-        <string>Editor</string>
-
-        <key>CFBundleURLSchemes</key>
-
-        <array>
-
-            <string>com.googleusercontent.apps.335802907028-hcgop02p43abicq5hmklnadb2andn0l5</string>
-
-        </array>
-
-    </dict>
-
-</array>
-
 </plist>
