--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   firebase_auth: ^5.2.1
   firebase_database: ^11.1.2
   provider: ^6.1.2
+  flutter_otp_text_field: ^1.2.0
 
 dev_dependencies:
   flutter_test:
