--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,9 @@ dependencies:
   firebase_database: ^11.1.2
   provider: ^6.1.2
   flutter_otp_text_field: ^1.2.0
+  email_auth: ^2.0.0
+  form_validation: ^3.1.1+8
+  email_otp: ^3.0.2
 
 dev_dependencies:
   flutter_test:
